# outfitter

./: README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  pages.yml  release.yml
catalog/: catalog.json  catalog.schema.json
cloud/: README.md  package.json  schema.sql  tsconfig.json  wrangler.toml
cloud/scripts/: e2e.sh
cloud/src/: index.ts
docs/: CNAME  about.html  account.html  downloads.html  index.html  site.css  site.js
scripts/: authkit-entry.js  fetch-icons.mjs  icon-list.json  validate-catalog.mjs
src/: App.tsx  index.css  ipc.ts  json.d.ts  main.tsx  mock.ts  store.ts  types.ts  update.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  catalog.rs  lib.rs  main.rs  ops.rs  profile.rs
src-tauri/src/providers/: brew.rs  flatpak.rs  mod.rs  winget.rs
src/components/: AppCard.tsx  AppDetail.tsx  AppGrid.tsx  Discover.tsx  FeedbackPanel.tsx  MyApps.tsx  Profile.tsx  StateButton.tsx  UpdateBanner.tsx  WelcomeScreen.tsx
