[package]
name = "outfitter"
version = "0.3.0"
description = "Outfitter - a friendly desktop front-end for OS package managers"
edition = "2021"

[lib]
name = "outfitter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.2"
